# github-db

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  EXAMPLES.md  README.md  SETUP.md  TEMPLATE_SETUP.md  build.sh  setup.sh  setup_template.sh
.cargo/: config.toml
.github/workflows/: example.yml  release.yml
src/: cert.rs  crypto.rs  git.rs  lib.rs  main.rs  storage.rs
template/: .gitattributes  .gitignore  README.md
template/.github/workflows/: database.yml
template/data/: example.json
