[package]
name = "github-db"
version = "0.1.0"
edition = "2021"
description = "A Git-based JSON storage system with encryption support"
authors = ["Cline"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = { version = "0.18", features = ["vendored-openssl", "vendored-libgit2", "static-curl", "static-ssl"] }
aes-gcm = "0.10"
base64 = "0.21"
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static", "-C", "link-arg=-static"]
